workaround for md-content overflow on whiteframe bug

--- a/client/main/main.less
+++ b/client/main/main.less
@@ -8,5 +8,9 @@
 
 .main__container {
   height: 100vh;
-  > md-content { background-color: @main-background; }
+
+  > md-content {
+    position: static; // TODO: remove after md-content whiteframe bug is fixed
+    background-color: @main-background;
+  }
 }
